<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniversitySync</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="authenticating">Authentication</string>
    <string name="login">Sign In</string>
    <string name="error_password_required">Password required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_email_required">Email required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="refresh">Refresh</string>
    <string name="groups">Groups</string>
    <string name="keywords">Keywords</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="add_note_succ">Note \"%s\" successfully created.</string>
    <string name="add_note_err">Note \"%s\" couldn\'t be created. Please, try again.</string>
    <string name="add_keyword">Add Keyword</string>
    <string name="references">References</string>
    <string name="add_reference">Add Reference</string>
    <string name="edit_string">Edit \"%s\"</string>
    <string name="delete_string">Delete \"%s\"</string>
    <string name="update_note_succ">Note \"%s\" successfully updated.</string>
    <string name="update_note_err">Note \"%s\" couldn\'t be updated. Please, try again.</string>
    <string name="placeholder">Text</string>
    <string name="delete_note_succ">Note \"%s\" successfully deleted.</string>
    <string name="delete_note_err">Note \"%s\" couldn\'t be deleted. Please, try again.</string>
    <string name="delete_note_sure">Do you want to delete this note?</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_new">New</string>
    <string name="new_note">Create New Note</string>

</resources>
