<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="500dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/title"/>
        <EditText android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/content"/>
        <EditText android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:gravity="top|start"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/keywords"/>
        <LinearLayout android:id="@+id/keywords"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/last_keyword"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_toLeftOf="@+id/add_keyword"
                    android:layout_toStartOf="@+id/add_keyword"
                    android:layout_centerVertical="true"/>
                <ImageButton android:id="@+id/add_keyword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_keyword"
                    android:src="@drawable/ic_action_new"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--style="?android:listSeparatorTextViewStyle"-->
            <!--android:text="@string/references"/>-->
        <!--<LinearLayout android:id="@+id/references"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<RelativeLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->
                <!--<EditText-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="text"-->
                    <!--android:layout_toLeftOf="@+id/add_reference"-->
                    <!--android:layout_toStartOf="@+id/add_reference"-->
                    <!--android:layout_centerVertical="true"/>-->
                <!--<ImageButton android:id="@+id/add_reference"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:contentDescription="@string/add_reference"-->
                    <!--android:src="@drawable/ic_action_new"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_centerVertical="true"/>-->
            <!--</RelativeLayout>-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"/>
            <Button android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>